infrastructure/base/ciliumNetworkPolicy/allow-acme.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-acme-solver
spec:
  endpointSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8089"
